[tool.poetry]
name = "hackandroll-nusmods-code"
version = "0.1.0"
description = ""
authors = ["colonletters <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
